<resources>
    <string name="app_name">MyTest</string>
    <string name="error_tips">糟糕！加载失败了！</string>

    <string name="login_avatar">登录页logo</string>
    <string name="login_phone">登录页手机图片</string>
    <string name="login_input_phone">请输入手机号</string>
    <string name="login_pass_code">登录页验证码图片</string>
    <string name="login_input_pass">请输入验证码</string>
    <string name="input_account">请输入账户</string>
    <string name="login_count_down">秒</string>
    <string name="login_get_pass">获取验证码</string>
    <string name="login_bind_phone_and_validate">立即登录</string>
    <string name="login_user_protocol">点击登录，即表示已阅读并同意《服务协议》</string>
    <string name="input_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_type_yzm">验证码登录</string>
    <string name="login_type_pwd">密码登陆</string>

    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
</resources>
