<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="142dp"
        android:layout_height="142dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_avatar"
        android:src="@drawable/login_icon" />

    <LinearLayout
        android:id="@+id/ll_yzm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/account"
                android:contentDescription="@string/login_phone" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/input_account"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/textcolorblack"

                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@color/gray_400" />

        <LinearLayout
            android:id="@+id/ll_user_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/password"
                android:contentDescription="@string/login_pass_code" />

            <EditText
                android:id="@+id/et_user_pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/textcolorblack"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@color/gray_400" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_login"
        android:text="@string/login_bind_phone_and_validate"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>